[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/UI/CornerKnot_14x14.png" type="Texture" id=1]
[ext_resource path="res://assets/UI/TopPatternPanel_01_33x15.png" type="Texture" id=2]
[ext_resource path="res://assets/UI/QuitIcon.png" type="Texture" id=3]
[ext_resource path="res://assets/UI/RectangleBox_96x96.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/KGPerfectPenmanship.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/fonts/Dungeon Quests.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/UI/TitleBox_64x16.png" type="Texture" id=7]
[ext_resource path="res://assets/UI/ItemBox_24x24.png" type="Texture" id=8]
[ext_resource path="res://assets/UI/Button_52x14.png" type="Texture" id=9]
[ext_resource path="res://src/Shop.gd" type="Script" id=10]
[ext_resource path="res://assets/UI/abilities.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 11
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 18
outline_size = 1
outline_color = Color( 0.341176, 0.282353, 0.321569, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 11
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 18
outline_size = 1
outline_color = Color( 0.341176, 0.282353, 0.321569, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=7]
size = 11
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 31
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 21
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
size = 18
font_data = ExtResource( 5 )

[node name="Shop" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 10 )

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.235294 )
margin_right = 1024.0
margin_bottom = 768.0

[node name="MessageLabel" type="Label" parent="."]
margin_left = 326.0
margin_top = 442.0
margin_right = 684.0
margin_bottom = 525.0

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 511, 381 )
scale = Vector2( 4.77083, 4.52604 )
texture = ExtResource( 4 )

[node name="CornerKnot14X14" type="Sprite" parent="."]
position = Vector2( 302, 186 )
scale = Vector2( 5.14286, 4.94643 )
texture = ExtResource( 1 )

[node name="CornerKnot14X15" type="Sprite" parent="."]
position = Vector2( 304, 584 )
scale = Vector2( 5.14286, 4.94643 )
texture = ExtResource( 1 )

[node name="CornerKnot14X16" type="Sprite" parent="."]
position = Vector2( 720, 581 )
scale = Vector2( 5.14286, 4.94643 )
texture = ExtResource( 1 )

[node name="quit_button" type="TextureButton" parent="."]
margin_left = 684.0
margin_top = 144.0
margin_right = 765.0
margin_bottom = 219.0
texture_normal = ExtResource( 3 )
expand = true

[node name="TopPatternPanel0133X15" type="Sprite" parent="."]
position = Vector2( 508, 232 )
scale = Vector2( 5.25373, 3.06667 )
texture = ExtResource( 2 )

[node name="TitleBox64X16" type="Sprite" parent="."]
position = Vector2( 513, 183 )
scale = Vector2( 3.64062, 3.625 )
texture = ExtResource( 7 )

[node name="tripleShotSprite" type="Sprite" parent="."]
position = Vector2( 397, 331 )
scale = Vector2( 3.19792, 2.85416 )
texture = ExtResource( 8 )

[node name="tripleShotLabel" type="Label" parent="."]
margin_left = 371.0
margin_top = 378.0
margin_right = 427.0
margin_bottom = 413.0
custom_fonts/font = SubResource( 1 )
text = "Triple Shot
50 coins"
align = 1

[node name="tripleShotButton" type="TextureButton" parent="."]
margin_left = 359.0
margin_top = 429.0
margin_right = 438.0
margin_bottom = 465.0
texture_normal = ExtResource( 9 )
expand = true

[node name="Label" type="Label" parent="tripleShotButton"]
margin_left = 18.0
margin_top = 6.0
margin_right = 61.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 2 )
text = "BUY"

[node name="tripleShot" type="Sprite" parent="."]
position = Vector2( 397, 331 )
scale = Vector2( 0.136301, 0.0993594 )
texture = ExtResource( 11 )
region_enabled = true
region_rect = Rect2( -9.58676, 114.676, 366.522, 509.322 )

[node name="addAmmo" type="Sprite" parent="."]
position = Vector2( 511, 330 )
scale = Vector2( 3.198, 2.854 )
texture = ExtResource( 8 )

[node name="addAmmoLabel" type="Label" parent="."]
margin_left = 473.0
margin_top = 378.0
margin_right = 556.0
margin_bottom = 413.0
custom_fonts/font = SubResource( 3 )
text = "Add Ammo +10
10 coins"
align = 1

[node name="addAmmoButton" type="TextureButton" parent="."]
margin_left = 473.0
margin_top = 429.0
margin_right = 552.0
margin_bottom = 465.0
texture_normal = ExtResource( 9 )
expand = true

[node name="Label" type="Label" parent="addAmmoButton"]
margin_left = 19.0
margin_top = 6.0
margin_right = 62.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 4 )
text = "BUY"

[node name="addAmmo2" type="Sprite" parent="."]
position = Vector2( 511, 330 )
scale = Vector2( 0.117697, 0.118011 )
texture = ExtResource( 11 )
region_enabled = true
region_rect = Rect2( 472.561, 139.773, 445.863, 465.248 )

[node name="fullHealth" type="Sprite" parent="."]
position = Vector2( 620, 330 )
scale = Vector2( 3.198, 2.83333 )
texture = ExtResource( 8 )

[node name="fullHealthLabel" type="Label" parent="."]
margin_left = 591.0
margin_top = 378.0
margin_right = 647.0
margin_bottom = 413.0
custom_fonts/font = SubResource( 7 )
text = "Full Health
20 coins"
align = 1

[node name="fullHealthButton" type="TextureButton" parent="."]
margin_left = 582.0
margin_top = 429.0
margin_right = 658.0
margin_bottom = 465.0
texture_normal = ExtResource( 9 )
expand = true

[node name="Label" type="Label" parent="fullHealthButton"]
margin_left = 19.0
margin_top = 6.0
margin_right = 62.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 4 )
text = "BUY"

[node name="fullHealth2" type="Sprite" parent="."]
position = Vector2( 620, 330 )
scale = Vector2( 0.131028, 0.11763 )
texture = ExtResource( 11 )
region_enabled = true
region_rect = Rect2( 1047.58, 171.628, 394.509, 424.437 )

[node name="Label" type="Label" parent="."]
margin_left = 468.0
margin_top = 161.0
margin_right = 559.0
margin_bottom = 198.0
custom_fonts/font = SubResource( 5 )
text = "SHOP"

[node name="CoinLabel" type="Label" parent="."]
margin_left = 340.0
margin_top = 513.0
margin_right = 417.0
margin_bottom = 536.0
custom_fonts/font = SubResource( 8 )
text = "Coins: "

[node name="ErrorPurchase" type="Label" parent="."]
margin_left = 397.0
margin_top = 471.0
margin_right = 630.0
margin_bottom = 513.0
custom_colors/font_color = Color( 1, 0.0117647, 0.0117647, 1 )
custom_fonts/font = SubResource( 6 )
align = 1
autowrap = true

[connection signal="pressed" from="quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="tripleShotButton" to="." method="_on_buy_triple_shot"]
[connection signal="pressed" from="addAmmoButton" to="." method="_on_buy_ammo"]
[connection signal="pressed" from="fullHealthButton" to="." method="_on_buy_full_heal"]
